static/css/style.css
/* ... */
.has-cover .archive .archive-title {
    color: white
}

.has-cover .archive .archive-description {
    color: rgba(255,255,255,0.8)
}

.has-cover .archive .archive-links a {
    color: rgba(255,255,255,0.8)
}

.has-cover .archive .archive-links a:focus,.has-cover .archive .archive-links a:hover {
    color: white
}

.page-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    position: relative;
    padding-right: 0
}

.inner {
    max-width: calc(64rem + 8vw);
    margin: 0 auto;
    padding: 0 8rem
}

@media only screen and (max-width: 640px) {
    .inner {
        padding:0 1rem
    }
}

.search-wrapper {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 500;
    box-sizing: border-box;
    padding: 2rem;
    display: none;
    opacity: 0;
    transition: opacity ease-out 0.2s;
    pointer-events: none;
    background: var(--color-background-overlay)
}

.search-wrapper .search-wrapper-close {
    position: absolute;
    right: 0;
    top: 0;
    width: 4rem;
    height: 4rem;
    margin: 2rem;
    background: transparent;
    border: 0;
    opacity: 0.5;
    transition: opacity ease-out 0.2s
}

.search-wrapper .search-wrapper-close:focus,.search-wrapper .search-wrapper-close:hover {
    opacity: 1
}

.search-wrapper .search-wrapper-close:before,.search-wrapper .search-wrapper-close:after {
    content: '';
    position: absolute;
    left: 20%;
    top: 50%;
    width: 60%;
    height: 2px;
    margin-top: -1px;
    border-radius: 1px;
    background: white
}

.search-wrapper .search-wrapper-close:before {
    transform: rotate(-45deg)
}

.search-wrapper .search-wrapper-close:after {
    transform: rotate(45deg)
}

.search-active {
    overflow-y: hidden
}

.search-active .search-wrapper {
    opacity: 1;
    pointer-events: unset
}

.search {
    position: relative;
    top: calc(12rem + 4vw);
    max-height: 80vh;
    width: 100%;
    max-width: calc(64rem + 8vw);
    margin: auto;
    background: var(--color-background-main);
    border-radius: 4px;
    box-shadow: 0 8px 24px -2px rgba(0,0,0,0.4);
    overflow: hidden
}

@media only screen and (max-width: 960px) {
    .search {
        top:6rem
    }
}

.search-form {
    position: relative;
    padding: 1rem 0;
    border-bottom: 1px solid var(--color-background-contrast)
}

.search-form .search-field {
    font-size: 2em;
    width: 100%;
    height: 5rem;
    margin: 0;
    padding: 0 2rem;
    border: 0;
    background: transparent;
    box-sizing: border-box;
    box-shadow: none !important;
    outline: 0 !important
}

.search-form .search-field:focus,.search-form .search-field:hover {
    border-color: var(--color-primary-active)
}

.search-form .search-button {
    display: none;
    position: relative;
    font-size: 1.6em;
    position: absolute;
    right: 0;
    top: 0;
    height: 4rem;
    margin: 1.5rem;
    padding: 0 1.5rem;
    border: 0;
    border-radius: 4px;
    color: white;
    background: var(--color-primary);
    transition: background ease-out 0.2s
}

.search-form .search-button:focus,.search-form .search-button:hover {
    background-color: var(--color-primary-active)
}

.search-form .search-button.search-button-clear {
    display: block;
    width: 2rem;
    height: 2rem;
    margin: 2.5rem;
    padding: 0;
    border-radius: 4rem;
    background: var(--color-content-secondary)
}

.search-form .search-button.search-button-clear:focus,.search-form .search-button.search-button-clear:hover {
    background: var(--color-content-main)
}

.search-form .search-button.search-button-clear i {
    display: none
}

.search-form .search-button.search-button-clear:before,.search-form .search-button.search-button-clear:after {
    content: '';
    position: absolute;
    left: 20%;
    top: 50%;
    width: 60%;
    height: 2px;
    margin-top: -1px;
    border-radius: 1px;
    background: var(--color-background-main)
}

.search-form .search-button.search-button-clear:before {
    transform: rotate(-45deg)
}

.search-form .search-button.search-button-clear:after {
    transform: rotate(45deg)
}

.search-result {
    overflow-y: scroll;
    max-height: 50vh;
    -webkit-overflow-scrolling: touch
}

@media only screen and (max-width: 640px) {
    .search-result {
        max-height:75vh
    }
}

.search-result .search-result-row {
    border-bottom: 1px solid var(--color-background-contrast)
}

.search-result .search-result-row:last-child {
    border: 0
}

.search-result .search-result-row .search-result-row-link {
    display: block;
    padding: 2rem;
    color: inherit;
    text-decoration: none;
    transition: all ease-out 0.05s
}

.search-result .search-result-row .search-result-row-link:hover,.search-result .search-result-row .search-result-row-link:focus {
    background: var(--color-background-secondary)
}

.search-result .search-result-row .search-result-row-link .search-result-row-title {
    font-size: 2em;
    line-height: 1.25em;
    font-weight: 700;
    text-indent: -1px;
    color: var(--color-content-lead)
}

.search-result .search-result-row .search-result-row-link .search-result-row-excerpt {
    margin: 0.5rem 0 0;
    font-family: var(--font-secondary);
    font-size: 1.25em;
    line-height: 2em;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis
}

.popular-wrapper {
    padding: 2rem
}

.popular-wrapper .popular-title {
    font-size: 2em;
    line-height: 1.25em;
    font-weight: 700;
    text-indent: -1px;
    color: var(--color-content-lead);
    margin-top: 0
}

.popular-wrapper .popular-tags {
    float: none;
    max-width: none;
    margin-bottom: 0
}

.nav-header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 400;
    transition: all ease-out 0.3s
}

@media only screen and (max-width: 640px) {
    .nav-header {
        transform:translate3d(0, -100%, 0)
    }
}
/* ... */

